--- a/style/main.css
+++ b/style/main.css
@@ -1,597 +1,353 @@
-body {
+/* RULES */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
   margin: 0 auto;
   padding: 0;
-  width: 1401px;
-
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-  width: 100%;
-  height: 712px;
-  background: url('../img/bg_image.png') 100% 100% no-repeat;
-  background-size: cover;
-}
-
-.header-navigation {
-  background-color: #000000;
+.wrap {
+  max-width: 1280px;
 }
 
 .container {
-  width: 79%;
-  margin: 0 auto;
+  max-width: 960px;
 }
 
-.header-navigation_block {
+/* RULES */
+/* HEADER */
+.header {
+  position: sticky;
+  z-index: 10;
+  background-color: #40b2b2;
+  opacity: 0.83;
+}
+
+.header .container {
   display: flex;
-  height: 71px;
   justify-content: space-between;
+  align-items: center;
 }
 
-.header-navigation_logo {
-  margin-right: auto;
-  padding-top: 21px;
-  padding-bottom: 23px;
-}
-
-/* navigation-links start */
-.header-navigation_links {
+.header__logo {
   margin: 0;
-  padding-left: 0;
-}
-
-.header-navigation_links li {
-  display: inline-block;
-  margin: 29px auto 27px 50px;
-  list-style-type: none;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 14px;
-  opacity: 0.7;
-}
-
-.header-navigation_links li:first-child {
-  margin-left: 0;
-}
-
-ul li a {
-  text-decoration: none;
+  padding: 1.8% 0;
+  font-family: 'Cherry Swash', cursive;
+  font-size: calc(20px + 1vw);
   color: #FFFFFF;
-
 }
 
-/* navigation-links finish */
-
-/* header-registration start */
-.header-registration {
-  margin-top: 180px;
-}
-
-.header-registration_column {
-  display: inline-block;
+.header__nav {
   margin: 0;
-  width: 516px;
-  height: 100%;
-}
-
-.header-title {
-  margin-top: 33px;
-  font-family: 'Raleway', sans-serif;
-  font-size: 36px;
-  font-weight: normal;
-  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  width: 51%;
   text-transform: uppercase;
-  color: #FFFFFF;
 }
 
-.header-registration_line {
-  width: 64px;
-  height: 2px;
-  border: none;
-  background-color: #FFFFFF;
-  margin-top: 36px;
-}
-
-.header-registration_paragraph {
-  margin-top: 30px;
-  margin-bottom: 59px;
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
-  color: #FFFFFF;
-  opacity: 0.8;
-}
-
-/* header-download_link start */
-.download_link {
-  font-family: 'OpenSans', sans-serif;
-  border: 2px solid #FFFFFF;
-  font-size: 15px;
-  color: #FFFFFF;
-  padding: 14px 32px;
+.header__link {
+  font-size: calc(12px + .2vw);
+  position: relative;
   text-decoration: none;
+  color: #DCE3E4;
 }
 
-.download_link:hover {
-  background-color: #FF8C2C;
-  color: #333333;
-  transition: all 0.1s ease-in-out;
+.header__link:not(:first-child)::before {
+  content: "/";
+  position: absolute;
+  left: -27%;
 }
 
-/* header-download_link finish */
-/* header-registration finish */
-.header-registration_form {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  margin-left: 222px;
-  width: 360px;
-  height: 360px;
-  border: none;
-  border-radius: 5px;
-  background-color: #FFFFFF;
-}
-
-.registration_head {
-  margin: 0;
-  font-family: 'OpenSans', sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  color: #293730;
-  background-color: #C4D2CB;
-  border: none;
-  text-align: center;
-  padding: 18px 52px 18px 56px;
-  border-radius: 5px 5px 0 0;
-}
-
-.registration_input {
-  display: inline-block;
-  width: 285px;
-  height: 31px;
-  font-family: 'OpenSans', sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  margin-left: 25px;
-  padding-right: 25px;
-  text-align: left;
-  border: none;
-  border-bottom: 1px solid #BDBDBD;
-}
-
-.registration_submit {
-  background-color: #FF8B38;
-  color: #FFFFFF;
-  font-family: 'OpenSans', sans-serif;
-  font-size: 15px;
-  font-weight: bold;
-  width: 360px;
-  height: 54px;
-  text-align: center;
-  border: none;
-  border-radius: 0 0 5px 5px;
-  margin-top: 49px;
-}
-
-.registration_submit:hover {
-  background-color: #000000;
-  color: #FF8B38;
-  transition: all 0.1s ease-in-out;
-}
-
-.name_label {
-  display: block;
-  padding-top: 29px;
-}
-
-.email_label {
-  display: block;
-  padding-top: 36px;
-}
-
-.psw_label {
-  display: block;
-  padding-top: 47px;
-}
-
-.message_label {
-display: inline-block;
-  padding-top: 128px;
-}
-.subject_label{
-  display: block;
-  padding-top: 47px; 
-}
-.color-text {
-  color: #FF8B38;
-}
-
-input {
-  outline: none;
-}
-
-.social-media {
-  border: 1px solid #C4D2CB;
-  max-height: 106px;
-
-}
-
-.social-media_column {
-  display: inline-block;
-  height: 106px;
-  width: 360px;
-
-}
-
-.social-media_links {
-
-  display: inline-block;
-  vertical-align: top;
-  margin-top: 30px;
-  margin-left: 87px;
-
-}
-
-.column_title {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  color: #333333;
-  margin: 0;
-  padding-top: 21px;
-  padding-bottom: 12px;
-}
-
-.column-paragraph {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  color: #86878B;
-  margin: 0;
-  padding-bottom: 22px;
-}
-
-.icon-link {
-  background-image: url('../img/social_media_icons.png');
-  background-repeat: no-repeat;
-  height: 43px;
-  width: 43px;
-  display: inline-block;
-  margin-right: 40px;
-}
-
-.social-media_icons-links {
-  padding-bottom: 45px;
-  width: 635px;
-}
-
-a.facebook {
-  background-position: left top;
-}
-
-a.twitter {
-  background-position: -88px -2px;
-}
-
-a.google {
-  background-position: -191px -2px;
-}
-
-a.pinterest {
-  background-position: -282px -2px;
-}
-
-a.instagram {
-  background-position: -383px -2px;
-}
-
-a.stumbleupon {
-  background-position: -484px -2px;
-  width: 53px;
-}
-
-a.rss {
-  background-position: -592px -2px;
-
-}
-
-.tabs-page {
-  width: 100%;
-  height: 596px;
-  padding-top: 156px;
-  background: #F5F5F5;
-}
-
-.tabs-page_column {
-  max-width: 476px;
-  display: inline-block;
-  margin-right: 90px;
-}
-
-.tabs-page_buttons {
-  width: 112px;
-  display: inline-block;
-  margin-right: 99px;
-  vertical-align: top;
-}
-
-.column-button {
-  height: 46px;
-  width: 121px;
-  color: #FFFFFF;
-  background-color: #FF8B38;
-  font-family: 'OpenSans', sans-serif;
-  font-size: 15px;
-  font-weight: normal;
-  border: none;
-  border-radius: 5px;
-  padding: 16px 25px;
-}
-
-.column-button:hover {
-  background-color: #000000;
-  transition: all 0.1s ease-in-out;
-}
-
-.tab_button {
-  display: block;
-  text-transform: uppercase;
-  height: 112px;
-  width: 112px;
-  color: #FFFFFF;
-  background-color: #333333;
-  font-family: 'OpenSans', sans-serif;
-  font-size: 11px;
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
-  margin-top: 1px;
-}
-
-.tab_button:hover {
-  background-color: #FF8B38;
-  transition: all 0.1s ease-in-out;
-}
-
-.tabs-page_picture {
-  background-image: url('../img/tabs_city.png');
-  background-repeat: no-repeat;
-  height: 253px;
-  width: 320px;
-  display: inline-block;
-  vertical-align: center;
-}
-
-.tabs-paragraph {
-  margin-top: 52px;
-  margin-bottom: 51px;
-}
-
-.tabs-title {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 21px;
-  font-weight: bold;
+.header__link:hover {
   color: #000000;
 }
-
-/* Block 3 start */
-.awesome-options {
-  text-align: center;
-}
-
-.header_title {
-  margin: 0;
-  padding: 0;
-  padding-top: 107px;
-  padding-bottom: 30px;
-  text-transform: uppercase;
-  font-family: 'Raleway', sans-serif;
-  font-size: 36px;
-  color: #212121;
-}
-
-.awesome-options_header {
-  margin: 0 auto;
-}
-
-.section_paragraph {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  width: 350px;
-  height: 52px;
-  color: #86878B;
-}
-
-.awesome-options_elips-bulb {
-  margin: 0 auto 29px;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background-image: url("../img/bulb.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  border: 2px solid #FF8C2C;
-}
-
-.awesome-options_elips-keyboard {
-  margin: 0 auto 29px;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background-image: url("../img/keyboard.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  border: 2px solid #FF8C2C;
-}
-
-.awesome-options_elips-volt {
-  margin: 0 auto 29px;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background-image: url("../img/volt.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  border: 2px solid #FF8C2C;
-}
-
-.awesome-options_section {
-  display: inline-block;
-  width: 350px;
-  height: 197px;
-  margin: auto;
-  margin-top: 80px;
-  margin-bottom: 99px;
-}
-
-.section_line {
-  width: 64px;
+/* HEADER */
+/* BURGER-MENU */
+.gamburger {
+  margin: 15px;
+  position: relative;
+  display: none;
   height: 2px;
-  border: none;
-  background-color: #FF8C2C;
-  margin: auto;
-  margin-bottom: 30px;
+  width: 20px;
+  background-color: #ffffff;
 }
 
-.section_title {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  color: #333333;
+.gamburger:before {
+  content: '';
+  position: absolute;
+  top: 6px;
+  left: 0;
+  height: 2px;
+  width: 20px;
+  background-color: #ffffff;
 }
 
-.pricing-section {
+.gamburger:after {
+  content: '';
+  position: absolute;
+  top: -6px;
+  left: 0;
+  height: 2px;
+  width: 20px;
+  background-color: #ffffff;
+}
+
+/* BURGER-MENU */
+/* PROMO */
+.promo {
+  display: flex;
+  justify-content: center;
+  background: url('../img/promo_black_sea-bg.png') center no-repeat;
+}
+
+.promo .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.promo__title {
+  max-width: 15em;
+  padding-bottom: 46px;
+  padding-top: 217px;
+  font-size: calc(30px + (35 - 30) * ((100vw - 400px) / (1280 - 400)));
+  text-transform: uppercase;
   text-align: center;
-  background-color: #F5F5F5;
-  height: 884px;
+  color: #E4E4E4;
 }
 
-/* Block 3 finish */
-/* Block city start */
-.city {
-  margin: 0 auto;
-  height: 322px;
-  text-align: center;
-  background-image: url("../img/background_city.png");
-  background-repeat: no-repeat;
-  background-position: center center;
+.promo__btn {
+  background-color: transparent;
+  border: 2px solid #FFFFFF;
+  border-radius: 5px;
+  color: #E4E4E4;
+  padding: 12px 41px;
+  margin-bottom: 134px;
+  text-decoration: none;
+  font-size: calc(15px + (15 - 10) * ((100vw - 400px) / (1280 - 400)));
 }
 
-.city_content {
-  height: 100%;
-  margin-bottom: 50px;
-}
-
-.white {
+.promo__btn:hover {
+  background-color: #000000;
   color: #FFFFFF;
-  padding-top: 76px;
+  transition: all 0.2s ease-in-out;
 }
 
-.white-line {
+.promo__list {
+  align-self: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 0;
+  color: #FFFFFF;
+  font-size: calc(15px + (15 - 10) * ((100vw - 400px) / (1280 - 400)));
+}
+
+.promo__item {
+  display: inline-block;
+  height: 9px;
+  width: 9px;
+  margin: auto 4px;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  font-size: calc(15px + (15 - 10) * ((100vw - 400px) / (1280 - 400)));
+}
+
+.promo__item:hover {
+  background-color: #40b2b2;
+  transition: all 0.15s ease-in-out;
+}
+
+/* PROMO */
+/* MAIN */
+.main .container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.main__title {
+  max-width: 55%;
+  margin: 0 auto;
+  padding-top: 5%;
+  padding-bottom: 3%;
+  font-size: calc(15px + (15 - 10) * ((100vw - 400px) / (1280 - 400)));
+  text-align: center;
+  font-weight: lighter;
+  line-height: 2em;
+  color: #4C505D;
+}
+
+.main__text {
+  margin: 0 auto;
+  padding-bottom: 7%;
+  text-align: center;
+  font-size: calc(10px + (10 - 5) * ((100vw - 400px) / (1280 - 400)));
+  line-height: 1.5em;
+}
+
+.main-list__icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  min-width: 50%;
+  padding-bottom: 9%;
+}
+
+.main-icon {
+  height: 55px;
+  width: 55px;
+}
+
+.main-icon:nth-child(1) {
+  background: url('../img/paper-box-icon.png') center no-repeat;
+}
+
+.main-icon:nth-child(2) {
+  background: url('../img/earthglobe-icon.png') center no-repeat;
+}
+
+.main-icon:nth-child(3) {
+  background: url('../img/papercase-icon.png') center no-repeat;
+}
+
+/* MAIN */
+/* TESTIMONIAL */
+.testimonial {
+  background-color: #00D089;
+}
+
+.testimonial .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.testimonial__dhavan {
+  margin-top: 52px;
+  clip-path: circle(60px at center);
+}
+
+.testimonial__wrap {
+  position: relative;
+  height: 135px;
+  width: 135px;
+}
+.testimonial__wrap::before {
+  position: absolute;
+  bottom: 16%;
+  left: 120%;
+  content: "dhavan";
+  font-size: 25px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #E4E4E4;
+}
+
+.testimonial__wrap::after {
+  position: absolute;
+  bottom: -100%;
+  left: 107%;
+  content: open-quote;
+  font-size: 300px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  transform: rotate(180deg);
+  opacity: 0.3;
+}
+
+.testimonial__review {
+  margin-top: 17%;
+  margin-bottom: 8%;
+  font-size: calc(12.5px + (10 - 5) * ((100vw - 400px) / (1280 - 400)));
+  font-weight: lighter;
+  line-height: 2.0em;
+  color: #FFFFFF;
+}
+
+/* TESTIMONIAL */
+/* CONTACT */
+.contact {
+
+  background: url('../img/contact_map-bg.png') center no-repeat;
+}
+
+.contact .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  height: 23vw;
+  width: 23vw;
+  border-radius: 50%;
+  background-color: #FFFFFF;
+  opacity: 0.85;
+}
+
+.form__user-name {
+  margin-top: 13%;
+  margin-bottom: 3%;
+  font-size: 100%;
+}
+
+.form__user-email {
+  margin-bottom: 3%;
+  font-size: 100%;
+}
+
+.form__user-message {
+  margin-bottom: 3%;
+}
+
+.form__user-message::placeholder {
+  font-size: calc(10px + (10 - 5) * ((100vw - 400px) / (1280 - 400)));
+}
+
+.form__submit {
+  position: relative;
+  background-color: #00D089;
+  border: none;
+  border-radius: 50%;
+  height: 2em;
+  width: 2em;
+  color: #FFFFFF;
+  padding: 1.5vw 1.5vw;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.form__submit::after {
+  position: absolute;
+  display: block;
+  height: 10px;
+  width: 10px;
   background-color: #FFFFFF;
 }
 
-
-/* Block city finish */
-/* foter start */
-.footer_content {
-  background: #000000;
-  height: 101px;
-  text-align: center;
-}
-
-.footer_icon-link {
-  background-image: url('../img/footer_navigation_logo.png');
-  background-repeat: no-repeat;
-  height: 24px;
-  width: 22px;
-  display: inline-block;
-  vertical-align: center;
-  margin-right: 15px;
-}
-
-.footer-content_links {
-  padding-top: 39px;
-  text-align: center;
-}
-
-a.footer-facebook {
-  background-position: left top;
-}
-
-a.footer-twitter {
-  background-position: -43px 0px;
-}
-
-a.footer-google {
-  background-position: -92px 1px;
-  width: 24px;
-}
-
-a.footer-pinterest {
-  background-position: -140px -1px;
-}
-
-a.footer-instagram {
-  background-position: -190px -1px;
-}
-
-a.footer-stumbleupon {
-  background-position: -242px -1px;
-  width: 26px;
-}
-
-a.footer-rss {
-  background-position: right top;
-
-}
-
-.footer-content_text {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 9px;
-  font-weight: normal;
-  color: #FFFFFF;
-  opacity: 0.5;
-}
-
-.registration_legend {
-  font-family: 'OpenSans', sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  color: #86878B;
-  text-align: center;
-}
-
-/* footer finish */
-.contact-button {
-  height: 46px;
-  width: 148px;
-  color: #FFFFFF;
-  background-color: #FF8B38;
-  font-family: 'OpenSans', sans-serif;
-  font-size: 15px;
-  font-weight: normal;
-  border: none;
-  border-radius: 5px;
-  padding: 15px 22px;
-}
-
-.contact-button:hover {
+.form__submit:hover {
   background-color: #000000;
-  color: #FF8B38;
-  transition: all 0.1s ease-in-out;
 }
 
-.registration-form {
-  text-align: center;
+/* CONTACT */
+
+/* FOOTER */
+.footer {
+  background-color: #00D089;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  padding: 1% 0;
 }
 
-.contact-form_content {
-  text-align: center;
-}
-.registration_fields{
-  display: inline-block;
-}
-/* customers-section start */
-.customers-section{
-  height: 592px;
-}
-/* custumers-section finish */
+/* FOOTER */
